--- a/talk.ipynb
+++ b/talk.ipynb
@@ -50,7 +50,7 @@
     "# Outline\n",
     "* The Coronal Heating Problem\n",
     "* Nanoflares: A (Possible) Solution\n",
-    "* FOXSI\n",
+    "* Hard X-Ray Observations + FOXSI\n",
     "* Observations of Hot Plasma"
    ]
   },
@@ -69,11 +69,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Visible Sun (boring)\n",
+    "* EUV/X-Ray Sun (exciting!)\n",
+    "* Coronal loops as building blocks of the corona\n",
     "* Intro coronal heating\n",
     "* Nice picture of EUV sun versus visual sun\n",
     "* Movie of flare\n",
     "* Don't care about flares\n",
-    "* Care about non-flaring ARs"
+    "* Care about non-flaring ARs\n",
+    "* How is the quiescent Sun heated"
    ]
   },
   {
@@ -91,16 +95,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Parker picture \n",
     "* Brief explanation of nanoflares\n",
     "* A few cartoons\n",
-    "* Explain (briefly) why these are so hard to detect"
+    "* Explain (briefly) why these are so hard to detect\n",
+    "* Difficult to detect ("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hard X-Ray Observations of the Sun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **BRIEF** overview of x-ray observations of the Sun\n",
+    " * SkyLab\n",
+    " * SMM HXR Imaging Spectrometer\n",
+    " * *Yohkoh* SXT/HXT\n",
+    " * RHESSI\n",
+    " * *Hinode* XRT\n",
+    " * FOXSI\n",
+    "\n",
+    "* Lots of images!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -109,7 +137,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "* Discuss the instrument\n",
     "  * sounding rocket\n",
@@ -120,7 +152,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "<p float=\"center\">\n",
     "<img src=\"img/foxsi-1-logo.png\" width=\"300\">\n",
@@ -167,6 +203,8 @@
     }
    },
    "source": [
+    "* DEM from thermodynamic quantities\n",
+    "* DEM from observations (hard!)\n",
     "* Illustration of loop\n",
     "* EBTEL example movie showing heating input, temperature, density, and DEM\n",
     "  * Constant heating\n",
@@ -2316,6 +2354,13 @@
    ],
    "source": [
     "HTML(anim.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some comments about how the DEM is calculated from observations"
    ]
   },
   {
