--- a/talk.ipynb
+++ b/talk.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 231,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -70,27 +70,23 @@
      "data": {
       "text/html": [
        "\n",
-       "<div class=\"container-fluid\">\n",
-       "        <div class=\"row\">\n",
-       "        <div class=\"col-md-7\">\n",
-       "            <h3> Rice P&A Journal Club</h3>\n",
+       "<div class=\"container-fluid text-center\">\n",
+       "    <div class=\"row\">\n",
        "            <h1><a href=\"https://www.nature.com/articles/s41550-017-0269-z\">\"Detection of nanoflare-heated plasma in the solar corona by the FOXSI-2 sounding rocket\"</a></h1>\n",
-       "    <h2> Shin-nosuke Ishikawa, Lindsay Glesener, Säm Krucker, Steven Christe, Juan Camilo Buitrago-Casas, Noriyuki Narukage and Juliana Vievering</h2>\n",
-       "            <h3>Will Barnes, 13 April 2018</h3>\n",
-       "        </div>\n",
-       "        <div class=\"col-md-1\">\n",
-       "        </div>\n",
-       "        <div class=\"col-md-4\">\n",
-       "             <img src=\"./img/nature_astronomy_cover.png\" class=\"img-fluid\">\n",
-       "        </div>\n",
-       "    </div>\n",
+       "            <h2> Shin-nosuke Ishikawa, Lindsay Glesener, Säm Krucker, Steven Christe, Juan Camilo Buitrago-Casas, Noriyuki Narukage and Juliana Vievering</h2>\n",
+       "     </div>\n",
+       "     <div class=\"row\">\n",
+       "        <img src=\"./img/nature_astronomy_cover.png\" width=\"50%\" class=\"img-responsive\" style=\"display:inline;\">\n",
+       "     </div>\n",
+       "    <h3>Rice P&A Journal Club // Will Barnes // 13 April 2018</h3>\n",
+       "    <a href=\"https://github.com/wtbarnes/journal-club-spring-2018\">github.com/wtbarnes/journal-club-spring-2018</a>\n",
        "</div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,22 +94,19 @@
    "source": [
     "HTML(\n",
     "\"\"\"\n",
-    "<div class=\"container-fluid\">\n",
-    "        <div class=\"row\">\n",
-    "        <div class=\"col-md-7\">\n",
-    "            <h3> Rice P&A Journal Club</h3>\n",
+    "<div class=\"container-fluid text-center\">\n",
+    "    <div class=\"row\">\n",
     "            <h1><a href=\"https://www.nature.com/articles/s41550-017-0269-z\">\"Detection of nanoflare-heated plasma in the solar corona by the FOXSI-2 sounding rocket\"</a></h1>\n",
-    "    <h2> Shin-nosuke Ishikawa, Lindsay Glesener, Säm Krucker, Steven Christe, Juan Camilo Buitrago-Casas, Noriyuki Narukage and Juliana Vievering</h2>\n",
-    "            <h3>Will Barnes, 13 April 2018</h3>\n",
-    "        </div>\n",
-    "        <div class=\"col-md-1\">\n",
-    "        </div>\n",
-    "        <div class=\"col-md-4\">\n",
-    "             <img src=\"./img/nature_astronomy_cover.png\" class=\"img-fluid\">\n",
-    "        </div>\n",
-    "    </div>\n",
+    "            <h2> Shin-nosuke Ishikawa, Lindsay Glesener, Säm Krucker, Steven Christe, Juan Camilo Buitrago-Casas, Noriyuki Narukage and Juliana Vievering</h2>\n",
+    "     </div>\n",
+    "     <div class=\"row\">\n",
+    "        <img src=\"./img/nature_astronomy_cover.png\" width=\"50%\" class=\"img-responsive\" style=\"display:inline;\">\n",
+    "     </div>\n",
+    "    <h3>Rice P&A Journal Club // Will Barnes // 13 April 2018</h3>\n",
+    "    <a href=\"https://github.com/wtbarnes/journal-club-spring-2018\">github.com/wtbarnes/journal-club-spring-2018</a>\n",
     "</div>\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -155,8 +148,10 @@
    "source": [
     "# Outline\n",
     "* The Solar Corona\n",
+    "* Coronal Heating\n",
     "* Nanoflares: A (Possible) Solution to Coronal Heating\n",
-    "* Hard X-Ray Observations + FOXSI\n",
+    "* Hard X-Rays\n",
+    "* FOXSI Mission\n",
     "* Observations of Hot Plasma"
    ]
   },
@@ -689,6 +684,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"./img/atmospheric_absorption.svg\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<img src=\"./img/atmospheric_absorption.svg\">"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -737,7 +759,7 @@
     }
    },
    "source": [
-    "## Soft X-Ray Telescope on *Yohkoh* (2001) & *Hinode* X-Ray Telescope"
+    "## Soft X-Ray Telescope on *Yohkoh* (1991) & *Hinode* X-Ray Telescope (2007)"
    ]
   },
   {
@@ -908,6 +930,60 @@
    "metadata": {},
    "source": [
     "Image courtesy of [FOXSI Team](http://foxsi.umn.edu/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img style='height: 100%; margin: 0px; float: left; align: center;' src='./img/flare_cartoon.png'/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<img style='height: 100%; margin: 0px; float: left; align: center;' src='./img/flare_cartoon.png'/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img style='width: 100%; margin: 0px; float: left; align: center;' src='./img/foxsi_v_rhessi.png'/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<img style='width: 100%; margin: 0px; float: left; align: center;' src='./img/foxsi_v_rhessi.png'/>"
    ]
   },
   {
